# autoservice74

./: README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: main.py
frontend/: Dockerfile  index.html
frontend/css/: style.css
frontend/images/: .gitkeep
frontend/js/: main.js
frontend/nginx/: nginx.conf
gateway/: Dockerfile  entrypoint.sh  pyproject.toml
gateway/app/: config.py  main.py
gateway/app/routers/: proxy.py
order-service/: entrypoint.sh  pyproject.toml
order-service/app/: api.py  enums.py  main.py
order-service/app/config/: database.py
order-service/app/database/: dao.py  models.py
order-service/migrations/: env.py
order-service/migrations/versions/: 335b2b232163_create_booking_time.py  41c6038878fd_create_orders_table.py
order-service/tests/: conftest.py
order-service/tests/integration/: test_orders_api.py
order-service/tests/unit/: test_order_dao.py
product-service/: entrypoint.sh  pyproject.toml
product-service/app/: api.py  database_config.py  main.py
product-service/app/config/: database.py
product-service/app/database/: dao.py  models.py
product-service/migrations/: env.py
product-service/migrations/versions/: 210ececa532a_create_description.py  9d31b31d54b7_create_products_table.py
user-service/: Dockerfile  entrypoint.sh  pyproject.toml
user-service/app/: api.py
user-service/app/config/: database.py
user-service/app/database/: dao.py  models.py
user-service/migrations/: env.py
user-service/migrations/versions/: 822a816ef189_create_users_table.py  bffd18a2d10f_create_car_info_additional_info.py
user-service/tests/app/: test_api.py
