[project]
name = "autoservice74"
version = "0.1.0"
description = ""
authors = [
    {name = "piupiujk",email = "docsapbeats@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.124.2,<0.125.0)",
    "pyhamcrest (>=2.1.0,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
